<resources>
    <string name="app_name">Contact Status</string>
    <string name="web_client_id">598540502298-hqc8kald7jgu0pe5rcdppk6hmb794grd.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_email">Confirm email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <!-- Errors -->
    <string name="field_required">Field is required!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_status">Status</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="title_activity_main_bottom">MainActivityBottom</string>

    <!-- status page-->
    <string name="auto_change_status">Auto change status</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="oncall">On call</string>
    <string name="unknown">Uknown</string>
    <string name="line">Line:</string>
    <string name="battery">Battery:</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="network">Network:</string>
    <string name="network_speed">Speed:</string>
    <string name="unlimited">Unlimited</string>
    <string name="limited">Limited</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="mode">Mode:</string>
    <string name="silent">Silent</string>
    <string name="show_location">Show location</string>
    <string name="save">Save</string>
    <string name="enter_status">Enter status &#8230;</string>
    <string name="status_changed_successfully">Status updated</string>
    <string name="status_change_failed">Status update failed</string>
    <string name="fail_to_retreive_status_from_db">Fail to retrieve status from database</string>
</resources>
