<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.AuthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_teal_600"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/login_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/loginField"

            >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_email_et"
                    style="@style/loginField"
                    android:hint="@string/hint_email"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_email"
                style="@style/loginField"
            >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_password_et"
                    style="@style/loginField"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:hint="@string/hint_password"
                    android:inputType="textVisiblePassword"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_password"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textColor="@color/md_amber_300"
                android:background="@drawable/btn_login_bg"
                android:text="@string/login"/>

            <RelativeLayout
                android:id="@+id/login_line_separator_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:layout_centerInParent="true">

                <View
                    android:id="@+id/login_divider_1_v"
                    android:layout_width="100dp"
                    android:layout_height="1px"
                    android:layout_centerVertical="true"
                    android:background="@color/md_amber_300"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/login_or_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/login_divider_1_v"
                    android:layout_toRightOf="@+id/login_divider_1_v"
                    android:fontFamily="monospace"
                    android:text="or"
                    android:textColor="@color/md_amber_300"/>

                <View
                    android:layout_width="100dp"
                    android:layout_height="1px"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/login_or_tv"
                    android:layout_toRightOf="@+id/login_or_tv"
                    android:background="@color/md_amber_300"/>
            </RelativeLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google_btn"
                style="@style/Login"
                android:layout_width="match_parent"
                android:layout_below="@+id/login_line_separator_rl"
                android:layout_margin="@dimen/activity_horizontal_margin"
                app:buttonSize="wide"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_sign_in_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_sign_in_question_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Do not have account yet?"
                android:textColor="@color/md_amber_300"
                android:textSize="16sp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_sign_in_link_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/login_sign_in_question_tv"
                android:layout_toRightOf="@+id/login_sign_in_question_tv"
                android:fontFamily="sans-serif"
                android:text="@string/sign_in"
                android:textColor="@color/md_amber_400"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </RelativeLayout>

    <!--    <RelativeLayout
            android:id="@+id/registration_login_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/registration_login_question_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Already have account?"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/registration_login_link_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/registration_login_question_tv"
                android:layout_toRightOf="@+id/registration_login_question_tv"
                android:fontFamily="sans-serif"
                android:text="Sign In"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </RelativeLayout>-->

    </RelativeLayout>
</RelativeLayout>